--- a/pom.xml
+++ b/pom.xml
@@ -262,27 +262,27 @@
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>1.9</version>
-        <configuration>
-          <signature>
-            <groupId>org.codehaus.mojo.signature</groupId>
-            <artifactId>java16</artifactId>
-            <version>1.0</version>
-          </signature>
-        </configuration>
-        <executions>
-          <execution>
-            <id>ensure-java-1.6-class-library</id>
-            <phase>test</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+      <!--<plugin>-->
+        <!--<groupId>org.codehaus.mojo</groupId>-->
+        <!--<artifactId>animal-sniffer-maven-plugin</artifactId>-->
+        <!--<version>1.9</version>-->
+        <!--<configuration>-->
+          <!--<signature>-->
+            <!--<groupId>org.codehaus.mojo.signature</groupId>-->
+            <!--<artifactId>java16</artifactId>-->
+            <!--<version>1.0</version>-->
+          <!--</signature>-->
+        <!--</configuration>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<id>ensure-java-1.6-class-library</id>-->
+            <!--<phase>test</phase>-->
+            <!--<goals>-->
+              <!--<goal>check</goal>-->
+            <!--</goals>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -320,7 +320,13 @@
       <plugin>
         <artifactId>cobertura-maven-plugin</artifactId>
         <groupId>org.codehaus.mojo</groupId>
-        <version>2.0</version>
+        <version>2.7</version>
+          <configuration>
+              <formats>
+                  <format>html</format>
+                  <format>xml</format>
+              </formats>
+          </configuration>
         <executions>
           <execution>
             <goals>
@@ -328,6 +334,8 @@
             </goals>
           </execution>
         </executions>
+         
+
       </plugin>
 
       <plugin>
@@ -417,7 +425,7 @@
 
     <pluginManagement>
       <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings 
+        <!--This plugin's configuration is used to store Eclipse m2e settings
           only. It has no influence on the Maven build itself. -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
